chore: finish collapse3d results and simulation section

--- a/TP2/docs/informe/03-implementacion.tex
+++ b/TP2/docs/informe/03-implementacion.tex
@@ -7,7 +7,7 @@
     \label{fig:UML-Simulacion}
 \end{wrapfigure}
 
-\subsection{simulación}\label{label:simulacion}
+\subsection{Simulación}\label{label:simulacion}
     La clase $LifeGame$ modela una instancia de la simulación del sistema. Por defecto las reglas son las del juego de la vida,
     pero es posible modificar las condiciones para poder simular sistemas alternativos. Esta clase es el nucleo de la
     simulación (Ver diagrama UML~\ref{fig:UML-Simulacion}), debido a que posee todos los componentes necesarios
