docs: presentation configs

--- a/TP2/docs/presentacion/HKUSTstyle.sty
+++ b/TP2/docs/presentacion/HKUSTstyle.sty
@@ -16,25 +16,37 @@
 
 
 \makeatletter
+%\setbeamertemplate{footline}
+%{
+%    \leavevmode%
+%    \hbox{%
+%        \begin{beamercolorbox}[wd=.3\paperwidth,ht=4.5ex,dp=2ex,center]{section in foot}%
+%            \usebeamerfont{} ITBA - (20242Q) 72.25 - Simulación de Sistemas
+%        \end{beamercolorbox}%
+%        \begin{beamercolorbox}[wd=.4\paperwidth,ht=4.5ex,dp=2ex,center]{subsection in foot}%
+%            \usebeamerfont{title in head/foot}\insertshorttitle
+%        \end{beamercolorbox}%
+%        \begin{beamercolorbox}[wd=.3\paperwidth,ht=4.5ex,dp=2ex,right]{section in foot}%
+%            \today \hspace*{12ex} \insertframenumber{} / \inserttotalframenumber\hspace*{2ex}
+%        \end{beamercolorbox}}%
+%    \vskip0pt%
+%}
 \setbeamertemplate{footline}
 {
     \leavevmode%
     \hbox{%
-        \begin{beamercolorbox}[wd=.3\paperwidth,ht=2.25ex,dp=1ex,center]{section in foot}%
-            \usebeamerfont{} HKUST(GZ)
+        \begin{beamercolorbox}[wd=.3\paperwidth,ht=3.5ex,dp=1.5ex,center]{section in foot}%
+            \fontsize{7}{8}\selectfont 72.25 - Simulación de Sistemas
         \end{beamercolorbox}%
-
-
-
-
-        \begin{beamercolorbox}[wd=.4\paperwidth,ht=2.25ex,dp=1ex,center]{subsection in foot}%
+        \begin{beamercolorbox}[wd=.4\paperwidth,ht=3.5ex,dp=1.5ex,center]{subsection in foot}%
             \usebeamerfont{title in head/foot}\insertshorttitle
         \end{beamercolorbox}%
-        \begin{beamercolorbox}[wd=.3\paperwidth,ht=2.25ex,dp=1ex,right]{section in foot}%
-            \today \hspace*{12ex} \insertframenumber{} / \inserttotalframenumber\hspace*{2ex}
+        \begin{beamercolorbox}[wd=.3\paperwidth,ht=3.5ex,dp=1.5ex,right]{section in foot}%
+            \fontsize{7}{8}\selectfont \today \hspace*{12ex} \insertframenumber{} / \inserttotalframenumber\hspace*{2ex}
         \end{beamercolorbox}}%
     \vskip0pt%
 }
+
 \makeatother
 
 
