--- a/TP2/docs/presentacion/presentacion.tex
+++ b/TP2/docs/presentacion/presentacion.tex
@@ -16,13 +16,14 @@
 \usepackage{graphicx,pstricks,listings,stackengine}
 \usepackage{lipsum}
 
-\author{Your Name}
-\title{Your Main Title}
-\subtitle{Your Subtitle}
+\author{}
+\title{Autómatas Celulares}
+\subtitle{Trabajo Práctico Nro. 2}
 \institute{
-   @connect.hkust-gz.edu.cn \\
-    Urban Governance and Design Thrust, Society Hub \\
-    The Hong Kong University of Science and Technology(GZ) \\
+    Grupo 7: \\
+    - Baez, Mauro Leandro (61747)\\
+    - Ippolito, Martin Augusto (62510)\\
+    - Preiti Tasat, Axel Facundo (62618)\\
 }
 \date{\small \today}
 \usepackage{HKUSTstyle}
@@ -95,7 +96,7 @@ subsubsectionstyle=show/shaded/hide]
 \end{frame}
 
 % Literature Review --- --- --- --- --- --- --- --- --- --- --- 
-\section{Literature Review}
+\section{Modelo}
 \begin{frame}{Research gap}
 
    this is a Literature gap.
@@ -109,7 +110,7 @@ subsubsectionstyle=show/shaded/hide]
 \end{frame}
 
 % Methods --- --- --- --- --- --- --- --- --- --- --- 
-\section{Methods}
+\section{Implementacion}
 \begin{frame}{Title}
     \begin{itemize}
         \item different themes which are usable in practice
@@ -128,7 +129,7 @@ subsubsectionstyle=show/shaded/hide]
 
 
 % Results --- --- --- --- --- --- --- --- --- --- --- 
-\section{Results}
+\section{Simulaciones}
 \begin{frame}
     \begin{itemize}
         \item different themes
@@ -137,6 +138,30 @@ subsubsectionstyle=show/shaded/hide]
         \item different themes
     \end{itemize}
 \end{frame}
+
+% Results --- --- --- --- --- --- --- --- --- --- ---
+\section{Resultados}
+\begin{frame}
+    \begin{itemize}
+        \item different themes
+        \item different themes
+        \item different themes
+        \item different themes
+    \end{itemize}
+\end{frame}
+
+% Results --- --- --- --- --- --- --- --- --- --- ---
+\section{Conclusiones}
+\begin{frame}
+    \begin{itemize}
+        \item different themes
+        \item different themes
+        \item different themes
+        \item different themes
+    \end{itemize}
+\end{frame}
+
+
 
 
 % --- Thank you slide ---
