docs: wip intru

--- a/TP2/docs/presentacion/presentacion.tex
+++ b/TP2/docs/presentacion/presentacion.tex
@@ -68,100 +68,14 @@ subsectionstyle=show/shaded/hide,
 subsubsectionstyle=show/shaded/hide]
 \end{frame}
 
-% Introduction --- --- --- --- --- --- --- --- --- --- --- --- 
-
-\section{Introduction}
-\begin{frame}{Background and Motivation}
-	\frametitle<presentation>{Background and Motivation}
-	\begin{block}{Why to give a presentation:}
-		\begin{itemize}
-			\item show the main arguments and results of your work
-			\item produce interest to read the full paper/report
-			\item goal: be educational and also entertaining
-		\end{itemize}
-	\end{block}
-	\begin{block}{Advantages of using \LaTeX ~with the beamer package:}
-		\begin{itemize}
-			\item very easy if the report is already written in \LaTeX
-			\item different themes which are usable in practice
-			\item possibility to create handouts using \emph{beamerarticle}
-		\end{itemize}
-	\end{block}
-\end{frame}
-
-\begin{frame}{Research question}
-
-   this is a Research question.
-
-\end{frame}
-
-% Literature Review --- --- --- --- --- --- --- --- --- --- --- 
-\section{Modelo}
-\begin{frame}{Research gap}
-
-   this is a Literature gap.
-
-\end{frame}
-
-\begin{frame}{Research question}
-
-   this is a Literature Review.
-
-\end{frame}
-
-% Methods --- --- --- --- --- --- --- --- --- --- --- 
-\section{Implementacion}
-\begin{frame}{Title}
-    \begin{itemize}
-        \item different themes which are usable in practice
-    \end{itemize}
-\end{frame}
-
-\begin{frame}
-	\frametitle<presentation>{Figures}
-	\begin{figure}
-		\centering
-			\includegraphics[height=5cm]{pic/itba.png}
-		\caption{Logo of the university.}
-		\label{fig:unilogo}
-	\end{figure}
-\end{frame}
-
-
-% Results --- --- --- --- --- --- --- --- --- --- --- 
-\section{Simulaciones}
-\begin{frame}
-    \begin{itemize}
-        \item different themes
-        \item different themes
-        \item different themes
-        \item different themes
-    \end{itemize}
-\end{frame}
-
-% Results --- --- --- --- --- --- --- --- --- --- ---
-\section{Resultados}
-\begin{frame}
-    \begin{itemize}
-        \item different themes
-        \item different themes
-        \item different themes
-        \item different themes
-    \end{itemize}
-\end{frame}
-
-% Results --- --- --- --- --- --- --- --- --- --- ---
-\section{Conclusiones}
-\begin{frame}
-    \begin{itemize}
-        \item different themes
-        \item different themes
-        \item different themes
-        \item different themes
-    \end{itemize}
-\end{frame}
-
-
+% Content --- --- --- --- --- --- --- --- --- --- --- ---
+\include{01-introduccion}
+\include{02-modelo}
+\include{03-implementacion}
+\include{04-simulaciones}
+\include{05-resultados}
+\include{06-conclusiones}
+%\include{aux-templates}
 
 
 % --- Thank you slide ---
