docs: wip intru

--- a/TP2/docs/presentacion/01-introduccion.tex
+++ b/TP2/docs/presentacion/01-introduccion.tex
@@ -38,10 +38,26 @@
 
 \begin{frame}{Vecindario}
     \begin{block}{Von Neumann:}
-    $N_{i,j}^{vN}:=\{(k,l) \in L\ |\ |k-i|+ |l - j| \leq r\}$
+        \begin{multicols}{2}
+
+            $N_{i,j}^{vN}:=\{(k,l) \in L\ |\ |k-i|+ |l - j| \leq r\}$
+
+            \begin{figure}[H]
+                \centering
+                \includegraphics[width=0.3\linewidth]{pic/01-intro/vn}
+            \end{figure}
+
+        \end{multicols}
     \end{block}
     \begin{block}{Moore:}
-    $N_{i,j}^{M}:=\{(k,l) \in L\ |\ |k-i|\leq r\ \wedge \ |l - j| \leq r \}$
+        \begin{multicols}{2}
+            $N_{i,j}^{M}:=\{(k,l) \in L\ |\ |k-i|\leq r\ \wedge \ |l - j| \leq r \}$
+
+            \begin{figure}[H]
+                \centering
+                \includegraphics[width=0.3\linewidth]{pic/01-intro/moore}
+            \end{figure}
+        \end{multicols}
     \end{block}
 \end{frame}
 
