--- a/TP2/docs/informe/05-resultados.tex
+++ b/TP2/docs/informe/05-resultados.tex
@@ -7,6 +7,13 @@ observable en función de la densidad de celdas vivas en el dominio inicial.
 
 \subsection{Conway en 2D}\label{subsec:conway-en-2d}
 
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\linewidth]{conway2d/thumbnail_i60}
+    \caption{Fotograma de la animación de Conway con $initialLiveCellsProportion = 0.6$. Link al video, ver \ref{subsubsec:conway-en-2d-link}}
+    \label{fig:thumbnailconway2d_i60}
+\end{figure}
+
 Como primer modelo, se ha estudiado el reconocido juego de la vida de Conway en dos dimensiones.
 Para ello, se fija los siguientes parámetros de entrada:
 
@@ -18,15 +25,6 @@ Para ello, se fija los siguientes parámetros de entrada:
     \item $shouldRevive = [3]$
     \item $initialDomainProportion = 0.16$
 \end{itemize}
-
-A continuación, se puede observar una animación característica del sistema.
-
-\begin{figure}[H]
-    \centering
-    \includegraphics[width=0.8\linewidth]{conway2d/thumbnail_i60}
-    \caption{Fotograma de la animación de Conway con $initialLiveCellsProportion = 0.6$. Enlace a la animación completa: https://youtu.be/1HHKAB-ZeT4}
-    \label{fig:thumbnailconway2d_i60}
-\end{figure}
 
 Variando el parámetro $initialLiveCellsProportion$ entre 0.1 y 0.9, se ha analizado la cantidad de celdas vivas
 a lo largo de los pasos temporales.
@@ -111,6 +109,13 @@ $initialLiveCellsProportion = 0.6$ se obtiene el menor tiempo de finalización y
 
 \subsection{Cuarentena en 2D}\label{subsec:cuarentena-2D}
 
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\linewidth]{cuarentena2d/thumbnail_i50}
+    \caption{Fotograma de la animación de Cuarentena con $initialLiveCellsProportion = 0.5$. Link al video, ver \ref{subsubsec:cuarentena-2d-link}}
+    \label{fig:thumbnailcuarentena2d_i50}
+\end{figure}
+
 El objetivo de este sistema es limitar el crecimiento en cantidad de celdas vivas a únicamente la sección inicial o una subparte de esta. Para ello
 se utilizaron los siguientes parámetros:
 
@@ -122,15 +127,6 @@ se utilizaron los siguientes parámetros:
     \item $shouldRevive = [4, 5, 6, 7, 8]$
     \item $initialDomainProportion = 0.16$
 \end{itemize}
-
-A continuación, se puede observar una animación característica del sistema.
-
-\begin{figure}[H]
-    \centering
-    \includegraphics[width=0.8\linewidth]{cuarentena2d/thumbnail_i50}
-    \caption{Fotograma de la animación de Cuarentena con $initialLiveCellsProportion = 0.5$. Enlace a la animación completa: https://youtu.be/PfXn3qFnXwE}
-    \label{fig:thumbnailcuarentena2d_i50}
-\end{figure}
 
 A diferencia de los otros sistemas, en este no solo se varió el parámetro $initialLiveCellsProportion$ entre 0.1 y 0.9 con un paso de 0.1, 
 sino que además se agregaron corridas con el parámetro valiendo 0.05 y 0.15.
@@ -173,7 +169,15 @@ A continuación, observamos el análisis del observable
 
 \subsection{Expansión Circular en 2D}\label{subsec:expansion-circular-2D}
 
-El objetivo de este sistema es obtener un crecimiento similar en todas las direcciones. Para ello se utilizaron los siguientes parámetros:
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\linewidth]{circular2d/thumbnail}
+    \caption{Fotograma de la animación de Expansión Circular con $initialLiveCellsProportion = 0.6$. Link al video, ver \ref{subsubsec:expansion-circular-2d-link}}
+    \label{fig:thumbnailcircular2d_i60}
+\end{figure}
+
+El objetivo de este sistema es obtener un crecimiento similar en todas las direcciones.
+Para ello se utilizaron los siguientes parámetros:
 
 \begin{itemize}
     \item $border = (0, 0) \times (100, 100)$
@@ -183,15 +187,6 @@ El objetivo de este sistema es obtener un crecimiento similar en todas las direc
     \item $shouldRevive = [2, 3]$
     \item $initialDomainProportion = 0.16$
 \end{itemize}
-
-A continuación, se puede observar una animación característica del sistema.
-
-\begin{figure}[H]
-    \centering
-    \includegraphics[width=0.8\linewidth]{circular2d/thumbnail}
-    \caption{Fotograma de la animación de Expansión Circular con $initialLiveCellsProportion = 0.6$. Enlace a la animación completa: https://youtu.be/BShT8UAhHek}
-    \label{fig:thumbnailcircular2d_i60}
-\end{figure}
 
 Variando el parámetro $initialLiveCellsProportion$ entre 0.1 y 0.9 con un step de 0.1, se ha analizado la cantidad de celdas vivas en función
 del tiempo.
@@ -228,6 +223,13 @@ grafica este mismo en función del valor de $initialLiveCellsProportion$
 
 \subsection{Expansión Cúbica}\label{subsec:cubito-3D}
 
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\linewidth]{cubo3d/thumbnail}
+    \caption{Fotograma de la animación de Expansión Cúbica con $initialLiveCellsProportion = 0.9$. Link al video, ver \ref{subsubsec:cubito-3d-link}}
+    \label{fig:thumbnailcubo3d_i90}
+\end{figure}
+
 El objetivo de este sistema es crecer en cada paso 1 posición más alejada del centro, pero sin que la cantidad de celdas vivas crezca en todos los pasos.
 
 \begin{itemize}
@@ -238,16 +240,6 @@ El objetivo de este sistema es crecer en cada paso 1 posición más alejada del 
     \item $shouldRevive = [4, 5, 6, 7, 8]$
     \item $initialDomainProportion = 0.16$
 \end{itemize}
-
-
-A continuación, se puede observar una animación característica del sistema.
-
-\begin{figure}[H]
-    \centering
-    \includegraphics[width=0.8\linewidth]{cubo3d/thumbnail}
-    \caption{Fotograma de la animación de Expansión Cúbica con $initialLiveCellsProportion = 0.9$. Enlace a la animación completa: https://youtu.be/Zu9bqnto0ak}
-    \label{fig:thumbnailcubo3d_i90}
-\end{figure}
 
 Variando el parámetro $initialLiveCellsProportion$ entre 0.1 y 0.9 con un step de 0.1, se ha analizado la cantidad de celdas vivas en función
 del tiempo.
@@ -283,6 +275,13 @@ Debido a la naturaleza del crecimiento resulta interesante analizar la pendiente
 
 \subsection{Conway en 3D}\label{subsec:conway-en-3d}
 
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\linewidth]{conway3d/thumbnail_i50}
+    \caption{Fotograma de la animación de Conway 3D con $initialLiveCellsProportion = 0.5$. Link al video, ver \ref{subsubsec:conway-en-3d-link}}
+    \label{fig:thumbnailconway3d_i50}
+\end{figure}
+
 Luego de analizar el sistema de Conway en dos dimensiones en la sección \ref{subsec:conway-en-2d},
 se ha decidido estudiar el mismo sistema en tres dimensiones, con el fin de comprobar si los resultados
 que se han obtenido en el caso bidimensional se mantienen en el caso tridimensional.
@@ -295,15 +294,6 @@ Para ello, se fijan los siguientes parámetros de entrada:
     \item $shouldRevive = [3]$
     \item $initialDomainProportion = 0.064$
 \end{itemize}
-
-A continuación, se puede observar una animación característica del sistema.
-
-\begin{figure}[H]
-    \centering
-    \includegraphics[width=0.8\linewidth]{conway3d/thumbnail_i50}
-    \caption{Fotograma de la animación de Conway 3D con $initialLiveCellsProportion = 0.5$. Enlace a la animación completa: https://youtu.be/HlUXy0G1ep0}
-    \label{fig:thumbnailconway3d_i50}
-\end{figure}
 
 Variando el parámetro $initialLiveCellsProportion$ entre 0.1 y 0.9, se ha analizado la cantidad de celdas vivas
 a lo largo de los pasos temporales.
@@ -393,6 +383,14 @@ de la celda viva más lejana al centro aumenta a medida que crece la densidad in
 
 
 \subsection{Colapso cúbico}\label{subsec:colapso-cubico}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\linewidth]{collapse3d/thumbnail_i30}
+    \caption{Fotograma de la animación de Colapso Cúbico con $initialLiveCellsProportion = 0.3$. Link al video, ver \ref{subsubsec:colapso-cubico-link}}
+    \label{fig:thumbnailcolapso3d_i50}
+\end{figure}
+
 Dado que todos los modelos mencionados anteriormente se apoyan en el modelo de Moore para determinar el estado
 de las celdas vecinas, se ha decidido estudiar un modelo que utilice el modelo de Von Neumann.
 Además, se impuso como regla que una celda viva solo puede mantenerse viva si tiene exactamente 0 vecinos vivos,
@@ -406,15 +404,6 @@ Por lo tanto, se fijan los siguientes parámetros de entrada:
     \item $shouldRevive = [2]$
     \item $initialDomainProportion = 0.064$
 \end{itemize}
-
-A continuación, se puede observar una animación característica del sistema.
-
-\begin{figure}[H]
-    \centering
-    \includegraphics[width=0.8\linewidth]{collapse3d/thumbnail_i30}
-    \caption{Fotograma de la animación de Colapso Cúbico con $initialLiveCellsProportion = 0.3$. Enlace a la animación completa: https://youtu.be/UeXUv7qMRoU}
-    \label{fig:thumbnailcolapso3d_i50}
-\end{figure}
 
 Variando el parámetro $initialLiveCellsProportion$ entre 0.1 y 0.9, se ha analizado la cantidad de celdas vivas
 a lo largo de los pasos temporales.
