--- a/TP2/docs/presentacion/05-resultados.tex
+++ b/TP2/docs/presentacion/05-resultados.tex
@@ -1,4 +1,4 @@
-\section{Introduction}
+\section{Resultados}
 \begin{frame}{Background and Motivation}
     \frametitle<presentation>{Background and Motivation}
     \begin{block}{Why to give a presentation:}
