--- a/TP2/docs/presentacion/01-introduccion.tex
+++ b/TP2/docs/presentacion/01-introduccion.tex
@@ -1,4 +1,4 @@
-\section{Introduction}
+\section{Introducción}
 
 \begin{frame}{Automatas Celulares}
     \begin{block}{Son arreglos regulares de celdas individuales de la misma clase.}
@@ -10,30 +10,17 @@
             \item Solo se considera un vecindario local.
         \end{itemize}
     \end{block}
+
+    \begin{multicols}{2}
+        {Estados: $a_{i}^{(t)}$ $\rightarrow$ Celda $i$ en tiempo $t$}
+
+        {Regla de evolución: $a_{i}^{(t)} = f \left[ \sum_{j=-r}^{j=r}  \alpha_{j} a_{i+j}^{(t-1)} \right]$}
+    \end{multicols}
+
 \end{frame}
 
-\begin{frame}{Fundamentos}
-    \begin{block}{Estados:}
-        Un estado esta determinado por la celda y el tiempo.
-        \\
-        $a_{i}^{(t)}$ $\longrightarrow$ Celda $i$ en tiempo $t$
+\begin{frame}{Game of Life}
 
-    \end{block}
-    \begin{block}{Regla de evolucion:}
-
-        \vspace{1em}
-
-        $a_{i}^{(t)} = f \left[ \sum_{j=-r}^{j=r}  \alpha_{j} a_{i+j}^{(t-1)} \right]$
-
-        \begin{multicols}{3}
-            r $\rightarrow$ rango
-
-            $\alpha_j$ $\rightarrow$ constantes enteras
-
-            $f$ $\rightarrow$ regla del automata
-        \end{multicols}
-
-    \end{block}
 \end{frame}
 
 \begin{frame}{Vecindario}
