--- a/TP2/docs/presentacion/02-modelo.tex
+++ b/TP2/docs/presentacion/02-modelo.tex
@@ -1,4 +1,4 @@
-\section{Introduction}
+\section{Modelo}
 \begin{frame}{Background and Motivation}
     \frametitle<presentation>{Background and Motivation}
     \begin{block}{Why to give a presentation:}
