docs: change margin and figure more conserva

--- a/TP2/docs/informe/03-implementacion.tex
+++ b/TP2/docs/informe/03-implementacion.tex
@@ -1,11 +1,11 @@
 \section{Implementación}\label{sec:implementacion}
 
-\begin{wrapfigure}{r}{0.5\textwidth}
+\begin{figure}[H]
     \centering
-    \includegraphics[width=1\linewidth]{UML}
+    \includegraphics[width=0.6\linewidth]{UML}
     \caption{Diagrama UML}
     \label{fig:UML-Simulacion}
-\end{wrapfigure}
+\end{figure}
 
 \subsection{Simulación}\label{label:simulacion}
     La clase $LifeGame$ modela una instancia de la simulación del sistema. Por defecto las reglas son las del juego de la vida,
