--- a/TP2/docs/informe/informe.tex
+++ b/TP2/docs/informe/informe.tex
@@ -9,7 +9,7 @@
 \usepackage{graphicx}
 \usepackage{float}
 \usepackage{wrapfig}
-
+\usepackage[a4paper, margin=1in]{geometry} % Adjust margins here
 
 \graphicspath{ {./images/} }
 
